--- a/Source Code/Pizzeria Website/index.html
+++ b/Source Code/Pizzeria Website/index.html
@@ -7,6 +7,8 @@
   </head>
   <body align="center">
     <h1> BELLA </h1>
-    <p> Hello </p>
+    <h6> Pizza Pasta Wings </h6>
+    <p> Order Now Button which redirects you to location </p>
+    <p> Include Menu Tab underneath Pizza Pata Wings </p>
     </body>
     </html>
